--- a/imagenes/estiloinicio.css
+++ b/imagenes/estiloinicio.css
@@ -15,6 +15,8 @@ div{
     margin: 10px 100px;
     background: url(4.jpg);
     background-size: 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     border: 2px solid #fff;
     border-radius: 10px;
 }
